<resources>
    <string name="successful">Successfully marked as favourites</string>
    <string name="drawer_open">open</string>
    <string name="drawer_close">close</string>
    <string name="api_key">AIzaSyCDylplefNyWlLDoBL_n2VFjwlMWvq3sBg  </string>
    <string name="app_name">Tobdon</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="facebook_app_id">674632155971845</string>
    <string name="facebook_app_id_test">175703936145004</string>
    <string name="error_passwords_do_not_match">Passwords do not match.</string>
    <string name="error_could_not_connect">Could not connect to server. Please try again later.</string>
    <string name="error_cannot_create_account">Account already exists!</string>
    <string name="error_cannot_sign_in">Please provide correct Email and Password</string>
    <string name="crash_toast_text">Sorry for inconvenience, we will get this issue fixed!</string>
    <string name="msg_connection_failed">Error! Connection to server failed.</string>
    <string name="msg_connection_error">Please check your internet connection</string>
    <string name="common.months">months</string>
    <string name="common.weeks">weeks</string>
    <string name="common.days">days</string>
    <string name="common.hrs">hrs</string>
    <string name="common.mins">mins</string>
    <string name="common.secs">secs</string>
    <string name="common.ago">ago</string>
    <string name="typeface_not_found">Typeface %$1 not found, or could not be loaded.
        Showing default typeface.</string>
    <string name="app">AnyTextView</string>
    <string name="assets_fonts_folder">fonts/</string>
    <string name="txt_enter_phone_no">Enter Phone No.</string>
    <string name="txt_register_text">Verificaion process is required to verify the phone no.</string>
    <string name="message_quit">Are you sure you want to exit?</string>
    <string name="message_wait">Please wait while data is loading.</string>
    <string name="password">Password</string>
    <string name="confirm_pass">Confirm Password</string>
    <string name="click_here">  Click Here</string>
    <string name="imgdesc_signup">Sign Up</string>
    <string name="imgdesc_signin">Sign In</string>
    <string name="back_to_login"><u>Back to Login</u></string>
    <string name="remember_me">remember me</string>
    <string name="login">Login</string>
    <string name="user_name">User Name</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="home">Home</string>
    <string name="activity">Activity</string>
    <string name="activity_log">Activity Log</string>
    <string name="trending">Trending</string>
    <string name="profile">Profile</string>
    <string name="categories">Categories</string>
    <string name="messages">Messages</string>
    <string name="settings">Settings</string>
    <string name="search_hint">Search Ads, User or Category</string>
    <string name="password_sent">Your password will be sent to your \nemail address</string>
    <string name="change_password">CHANGE PASSWORD</string>
    <string name="reason_for_rejection">REASON</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="via_email">Via Email</string>
    <string name="via_sms">Via SMS</string>
    <string name="tell_a_friend">TELL A FRIEND</string>
    <string name="contact_email">contact@voltas.com</string>
    <string name="contact_phone">5555 555 555</string>
    <string name="enter_text">Enter Text</string>
    <string name="you_paid">YOU PAID</string>
    <string name="tap_to_rate">TAP A STAR TO RATE DRIVER</string>
    <string name="contact_address">Columbus College of Arts, New York</string>
    <string name="lorem_ipsum">Lorem Ipsum is simply dummy text of the printing and types
        etting industry. Lorem Ipsum has been the industrys standard dummy text ever sinc
        e the 1500s, when an unknown printer took a galley of type and scrambled it t
        o make a type specimen book. It has survived not only five centuries, but
         also the leap into electronic typesetting, remaining essentially unchanged
         . It was popularised in the 1960s with the release of Letraset sheets cont
         aining Lorem Ipsum passages, and more recently with desktop publishing so
         ftware like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="this_is_login_fragment">This is Login Fragment</string>
    <string name="lorem_small">Lorem Ipsum is simply dummy text of the printing and types
        etting industry. Lorem Ipsum has been the industrys standard dummy text ever sinc
        e the 1500s.</string>
    <string name="default_hint_text">Where are you going?</string>
    <string name="connection_lost">No Internet Found</string>
    <string name="font_normal">Poppins-Regular_1.ttf</string>
    <string name="font_bold">Poppins-Bold_1.ttf</string>
    <string name="font_italic_bold">Roboto-Italic_2.ttf</string>
    <string name="font_italic_light">Roboto-LightItalic_2.ttf</string>
    <string name="font_handwriting">segoeprb_1.ttf</string>
    <string name="notification">Notifications</string>
    <string name="email_or_mobile_no">Email or Mobile No.</string>
    <string name="or">OR</string>
    <string name="sign_in">Sign In</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="forgot_password_1">Forgot Password</string>
    <string name="reset_now">Reset Now</string>
    <string name="reset_password">Reset Password</string>
    <string name="new_to_tobdon">New to TOBDON?</string>
    <string name="sign_up_now">Sign Up Now</string>
    <string name="sign_up">Sign Up</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="logout">Logout</string>
    <string name="are_you_sure_you_want_to_logout">Are you sure you want to logout?</string>
    <string name="full_name">Full Name</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="verify_me">Verify Me</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="sign_in_now">Sign In Now</string>
    <string name="how_do_you_want_to_set_your_photo">How do you want to set your photo?</string>
    <string name="upload_photo">Upload Photo</string>
    <string name="will_be_implemented">will be implemented in future version</string>
    <string name="country">Country</string>
    <string name="enter_fullname">Enter Full Name</string>
    <string name="enter_query">Please enter query.</string>
    <string name="enter_valid_number_error">Enter valid phone number format</string>
    <string name="enter_password">Password Field cannot be Empty</string>
    <string name="passwordLength">Password cannot be less than 6 characters</string>
    <string name="enter_valid_email">Please Enter Valid Email</string>
    <string name="filed_cannot_be_empty">This field cannot be empty</string>
    <string name="enter_phonenumber">Enter Phone Number</string>
    <string name="confirm_password_error">Confirm Password did not match</string>
    <string name="email_address">Email Address</string>
    <string name="submit">Submit</string>
    <string name="verification">Verification</string>
    <string name="enter_your_email_address_and_we_ll_send_you_a_password_reset_link">Enter your email address and we\'ll send you a password reset link.</string>
    <string name="haven_t_received_code_yet">Haven\'t received code yet?</string>
    <string name="resend_code">Resend Code</string>
    <string name="wait_for">wait for</string>
    <string name="enter_valid_pincode">Please Enter Verification Code</string>
    <string name="conform_password_error">confirm password does not match</string>
    <string name="enter_confirm_password">Confirm Password Field cannot be Empty</string>
    <string name="confirmpasswordLength">Confirm Password cannot be less than 6 characters</string>
    <string name="TermsCondition">Terms and Conditions</string>
    <string name="AboutUs">About Us</string>
    <string name="ContactUs">Contact Us</string>
    <string name="PrivacyPolicy">Privacy &amp; Policy</string>
    <string name="skip">SKIP</string>
    <string name="next">NEXT</string>
    <string name="no_notification_found">No notification found</string>
    <string name="just_now">Just Now</string>
    <string name="earlier">Earlier</string>
    <string name="account_settings">Account Settings</string>
    <string name="contact_us">Contact Us</string>
    <string name="notification_settings">Notification Settings</string>
    <string name="privacy_settings">Privacy Settings</string>
    <string name="privacy_and_policy">Privacy &amp; Policy</string>
    <string name="terms_and_condition">Terms &amp; Condition</string>
    <string name="have_a_query_or_suggestion">Have a query or suggestion? Please mention in the field below &amp; send us. We will try to resolve your query promptly.</string>
    <string name="posts">Posts</string>
    <string name="post_detail">Post Detail</string>
    <string name="media">Media</string>
    <string name="following">Following</string>
    <string name="followers">Followers</string>
    <string name="no_post_found">No post found</string>
    <string name="no_media_found">No media found</string>
    <string name="follow">Follow</string>
    <string name="unfollow">Unfollow</string>
    <string name="search">Search</string>
    <string name="what_s_new">What\'s New?</string>
    <string name="create_post">Create Post</string>
    <string name="add_photo">Add Photo</string>
    <string name="add_video">Add Video</string>
    <string name="add_tobdon">Add Tobdon</string>
    <string name="pole">Pole</string>
    <string name="location">Location</string>
    <string name="interest">Interest</string>
    <string name="visibility">Visibility</string>
    <string name="risco_level">Risco Level</string>
    <string name="high">High</string>
    <string name="medium">Medium</string>
    <string name="post_settings">Post Settings</string>
    <string name="post_tagging">Post Tagging</string>
    <string name="discoverability">Discoverability</string>
    <string name="let_others_find_you_by_your_email_address">Let others find you by your email address</string>
    <string name="let_other_find_you_by_your_phone_number">Let other find you by your phone number</string>
    <string name="do_not_allow_anyone_to_tag_me_in_post">Do not allow anyone to tag me in post</string>
    <string name="allow_people_follow_me_to_tag_me_in_posts">Allow people follow me to tag me in posts</string>
    <string name="allow_only_people_you_follow_to_tag_you_in_posts">Allow only people you follow to tag you in posts</string>
    <string name="allow_anyone_to_tag_you_in_posts">Allow anyone to tag you in posts</string>
    <string name="direct_messages">Direct Messages</string>
    <string name="allow_anyone_to_send_direct_message">Allow anyone to send direct message</string>
    <string name="allow_only_people_you_follow_to_send_direct_message">Allow only people you follow to send direct message</string>
    <string name="allow_people_who_follow_me_to_send_direct_message">Allow people who follow me to send direct message</string>
    <string name="do_not_allow_anyone_to_send_direct_message">Do not allow anyone to send direct message</string>
    <string name="safety">Safety</string>
    <string name="hide_sensitive_content_that_may_be_too_disturbing">Hide sensitive content that may be too disturbing</string>
    <string name="allow_sensitive_content_that_may_be_too_disturbing">Allow sensitive content that may be too disturbing</string>
</resources>