<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/setting_back"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <com.app.tobdon.ui.views.AnyTextView
                android:layout_width="0dp"
                android:layout_height="@dimen/x60"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:paddingEnd="@dimen/x10"
                android:paddingStart="@dimen/x15"
                android:text="@string/notification_settings"
                android:textColor="@color/app_black_text"
                android:textSize="@dimen/x14"
                app:typeface="@string/font_normal" />

            <Switch
                android:id="@+id/btnNotifications"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/x10"
                android:buttonTint="@color/app_brown" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/x1"
            android:background="@color/view_line_color_3" />

        <com.app.tobdon.ui.views.AnyTextView
            android:id="@+id/btnAccountSetting"
            android:layout_width="match_parent"
            android:layout_height="@dimen/x60"
            android:drawableEnd="@drawable/right_arrow"
            android:gravity="center_vertical"
            android:paddingEnd="@dimen/x10"
            android:paddingStart="@dimen/x15"
            android:text="@string/account_settings"
            android:textColor="@color/app_black_text"
            android:textSize="@dimen/x14"
            app:typeface="@string/font_normal" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/x1"
            android:background="@color/view_line_color_3" />

        <com.app.tobdon.ui.views.AnyTextView
            android:id="@+id/btnPrivacySetting"
            android:layout_width="match_parent"
            android:layout_height="@dimen/x60"
            android:drawableEnd="@drawable/right_arrow"
            android:gravity="center_vertical"
            android:paddingEnd="@dimen/x10"
            android:paddingStart="@dimen/x15"
            android:text="@string/privacy_settings"
            android:textColor="@color/app_black_text"
            android:textSize="@dimen/x14"
            app:typeface="@string/font_normal" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/x1"
            android:background="@color/view_line_color_3" />

        <com.app.tobdon.ui.views.AnyTextView
            android:id="@+id/btnPrivacyPolicy"
            android:layout_width="match_parent"
            android:layout_height="@dimen/x60"
            android:drawableEnd="@drawable/right_arrow"
            android:gravity="center_vertical"
            android:paddingEnd="@dimen/x10"
            android:paddingStart="@dimen/x15"
            android:text="@string/privacy_and_policy"
            android:textColor="@color/app_black_text"
            android:textSize="@dimen/x14"
            app:typeface="@string/font_normal" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/x1"
            android:background="@color/view_line_color_3" />

        <com.app.tobdon.ui.views.AnyTextView
            android:id="@+id/btnTermsCondition"
            android:layout_width="match_parent"
            android:layout_height="@dimen/x60"
            android:drawableEnd="@drawable/right_arrow"
            android:gravity="center_vertical"
            android:paddingEnd="@dimen/x10"
            android:paddingStart="@dimen/x15"
            android:text="@string/terms_and_condition"
            android:textColor="@color/app_black_text"
            android:textSize="@dimen/x14"
            app:typeface="@string/font_normal" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/x1"
            android:background="@color/view_line_color_3" />

        <com.app.tobdon.ui.views.AnyTextView
            android:id="@+id/btnContactUs"
            android:layout_width="match_parent"
            android:layout_height="@dimen/x60"
            android:drawableEnd="@drawable/right_arrow"
            android:gravity="center_vertical"
            android:paddingEnd="@dimen/x10"
            android:paddingStart="@dimen/x15"
            android:text="@string/ContactUs"
            android:textColor="@color/app_black_text"
            android:textSize="@dimen/x14"
            app:typeface="@string/font_normal" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/x1"
            android:background="@color/view_line_color_3" />

        <com.app.tobdon.ui.views.AnyTextView
            android:id="@+id/btnAboutUs"
            android:layout_width="match_parent"
            android:layout_height="@dimen/x60"
            android:drawableEnd="@drawable/right_arrow"
            android:gravity="center_vertical"
            android:paddingEnd="@dimen/x10"
            android:paddingStart="@dimen/x15"
            android:text="@string/AboutUs"
            android:textColor="@color/app_black_text"
            android:textSize="@dimen/x14"
            app:typeface="@string/font_normal" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/x1"
            android:background="@color/view_line_color_3" />

        <com.app.tobdon.ui.views.AnyTextView
            android:id="@+id/btnLogout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/x60"
            android:drawableEnd="@drawable/right_arrow"
            android:gravity="center_vertical"
            android:paddingEnd="@dimen/x10"
            android:paddingStart="@dimen/x15"
            android:text="@string/logout"
            android:textColor="@color/app_black_text"
            android:textSize="@dimen/x14"
            app:typeface="@string/font_normal" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/x1"
            android:background="@color/view_line_color_3" />


    </LinearLayout>
</ScrollView>