<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:paddingEnd="@dimen/x20"
    android:paddingStart="@dimen/x20">

    <ImageView
        android:layout_width="@dimen/x120"
        android:layout_height="@dimen/x120"
        android:layout_gravity="center"
        android:layout_margin="@dimen/x30"

        android:background="@color/app_brown" />


    <com.app.tobdon.ui.views.AnyTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enter_your_email_address_and_we_ll_send_you_a_password_reset_link"
        android:textColor="@color/app_black_text"
        android:gravity="center"
        android:textSize="@dimen/x14"
        app:typeface="@string/font_normal" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/x20"
        android:textColorHint="@color/app_brown">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/edt_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:gravity="center"
            android:hint="@string/email_address"
            android:imeOptions="actionDone"
            android:inputType="textEmailAddress"
            android:maxLength="50"
            android:paddingTop="@dimen/x10"
            android:textColor="@color/app_black_text"
            android:textSize="@dimen/x14" />

    </android.support.design.widget.TextInputLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/x1"
        android:layout_marginTop="@dimen/x10"
        android:background="@color/view_line_color" />

    <Button
        android:id="@+id/SubmitButton"
        android:layout_width="match_parent"
        android:layout_height="@dimen/x45"
        android:layout_gravity="bottom"
        android:layout_marginTop="@dimen/x30"
        android:background="@drawable/button_brown"
        android:text="@string/submit"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/x14" />

</LinearLayout>